c4prj2_input/grade.txt
Grading at Sun Aug  2 14:21:14 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:79:20: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       line=line_ind=NULL;
                    ^
input.c:79:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       line=line_ind=NULL;
           ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
